fix: resolve sonar issues in UI service and remove empty duplicate test